.metadata/.plugins/org.eclipse.cdt.ui/stmvalidation.build.log
18:45:59 **** Incremental Build of configuration Debug for project stmvalidation ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xC -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:128:9: warning: implicit declaration of function 'FillCCDPixelBufferWithSine' [-Wimplicit-function-declaration]
  128 |         FillCCDPixelBufferWithSine();
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:150:3: warning: implicit declaration of function 'MX_GPIO_Init'; did you mean 'HAL_GPIO_Init'? [-Wimplicit-function-declaration]
  150 |   MX_GPIO_Init();
      |   ^~~~~~~~~~~~
      |   HAL_GPIO_Init
../Core/Src/main.c:166:3: warning: implicit declaration of function 'CDC_Transmit_FS' [-Wimplicit-function-declaration]
  166 |   CDC_Transmit_FS("Target Ready\r\n",14);
      |   ^~~~~~~~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:546:13: warning: conflicting types for 'MX_GPIO_Init'; have 'void(void)'
  546 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:546:13: error: static declaration of 'MX_GPIO_Init' follows non-static declaration
../Core/Src/main.c:150:3: note: previous implicit declaration of 'MX_GPIO_Init' with type 'void(void)'
  150 |   MX_GPIO_Init();
      |   ^~~~~~~~~~~~
../Core/Src/main.c:560:6: warning: conflicting types for 'FillCCDPixelBufferWithSine'; have 'void(void)'
  560 | void FillCCDPixelBufferWithSine(void) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:128:9: note: previous implicit declaration of 'FillCCDPixelBufferWithSine' with type 'void(void)'
  128 |         FillCCDPixelBufferWithSine();
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:575:6: warning: 'CDCReceiveCallback' defined but not used [-Wunused-function]
  575 | void CDCReceiveCallback(uint8_t* Buf, uint32_t Len) {
      |      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:546:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  546 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

18:45:59 Build Failed. 2 errors, 7 warnings. (took 449ms)

